RESOLVED FIXED52154
JITStubs doesn't compile when using ARMv7Assembler and RVCT
https://bugs.webkit.org/show_bug.cgi?id=52154
Summary JITStubs doesn't compile when using ARMv7Assembler and RVCT
David Tapuska
Reported 2011-01-10 10:47:32 PST
Compilation errors occur when using ARMv7Assembler and RVCT compiler. CTIs aren't defined.
Attachments
Add CTI asm versions for RVCT with THUMB2 (3.37 KB, patch)
2011-01-10 10:54 PST, David Tapuska
eric: review-
Same as 78413 without tabs in ChangeLog (3.41 KB, patch)
2011-01-10 11:44 PST, David Tapuska
no flags
David Tapuska
Comment 1 2011-01-10 10:54:09 PST
Created attachment 78413 [details] Add CTI asm versions for RVCT with THUMB2
WebKit Review Bot
Comment 2 2011-01-10 10:57:10 PST
Attachment 78413 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source/JavaScriptCore/jit/JITStubs.cpp']" exit_code: 1 Source/JavaScriptCore/ChangeLog:3: Line contains tab character. [whitespace/tab] [5] Source/JavaScriptCore/ChangeLog:5: Line contains tab character. [whitespace/tab] [5] Source/JavaScriptCore/ChangeLog:7: Line contains tab character. [whitespace/tab] [5] Source/JavaScriptCore/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] Source/JavaScriptCore/ChangeLog:10: Line contains tab character. [whitespace/tab] [5] Source/JavaScriptCore/ChangeLog:11: Line contains tab character. [whitespace/tab] [5] Source/JavaScriptCore/ChangeLog:12: Line contains tab character. [whitespace/tab] [5] Total errors found: 7 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Seidel (no email)
Comment 3 2011-01-10 11:25:20 PST
Comment on attachment 78413 [details] Add CTI asm versions for RVCT with THUMB2 Please fix the tabs.
David Tapuska
Comment 4 2011-01-10 11:44:14 PST
Created attachment 78419 [details] Same as 78413 without tabs in ChangeLog
WebKit Commit Bot
Comment 5 2011-01-10 12:39:23 PST
Comment on attachment 78419 [details] Same as 78413 without tabs in ChangeLog Clearing flags on attachment: 78419 Committed r75413: <http://trac.webkit.org/changeset/75413>
WebKit Commit Bot
Comment 6 2011-01-10 12:39:29 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.