2011-01-10  Dave Tapuska  <dtapuska@rim.com>

Reviewed by Gavin Barraclough.

        Add CTI ASM versions for RVCT ARM THUMB2 mode.

        https://bugs.webkit.org/show_bug.cgi?id=52154

        * jit/JITStubs.cpp:
        (JSC::ctiTrampoline):
        (JSC::ctiVMThrowTrampoline):
        (JSC::ctiOpThrowNotCaught):

Canonical link: https://commits.webkit.org/65727@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75413 268f45cc-cd09-0410-ab3c-d52691b4dbfc